prettier and eslint

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "prestart": "yarn build",
     "start": "node ./dist/server",
     "prebuild": "rimraf ./dist",
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "eslint .",
+    "prettier": "prettier --config .prettierrc 'src/**/*.ts' --write"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -25,11 +27,17 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.6.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.14.9",
     "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.14.1",
+    "@typescript-eslint/parser": "^7.14.1",
+    "eslint": "^9.6.0",
+    "prettier": "^3.3.2",
     "rimraf": "^5.0.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.2"
@@ -40,7 +48,6 @@
     "@constants": "dist/constants",
     "@controllers": "dist/controllers",
     "@services": "dist/services",
-    "@models": "dist/models",
     "@entries": "dist/entries",
     "@utils": "dist/utils",
     "@libs": "dist/libs",
